# leviathan

./: .configure-custom.sh  .gitignore  CMakeLists.txt  Dockerfile  README.md  configure
checker/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/: format.hpp  formula.hpp  frame.hpp  identifiable.hpp  lex.hpp  parser.hpp  pretty_printer.hpp  simplifier.hpp  solver.hpp
lib/src/: solver.cpp
lib/src/ast/: formula.cpp  generator.cpp  generator.hpp  simplifier.cpp  translator.cpp  translator.hpp
lib/src/parser/: lex.cpp  parser.cpp
tests/: tests.index  timeouts-after-fix.txt
